--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -103,3 +103,52 @@ include::output/layer_graticule_square_14_command.txt[]
 include::output/layer_graticule_square_14_result.txt[]
 
 image::square_graticules.png[]
+
+==== Oval
+
+include::output/layer_graticule_oval_0_command.txt[]
+include::output/layer_graticule_oval_0_result.txt[]
+
+include::output/layer_graticule_oval_1_command.txt[]
+include::output/layer_graticule_oval_1_result.txt[]
+
+include::output/layer_graticule_oval_2_command.txt[]
+include::output/layer_graticule_oval_2_result.txt[]
+
+include::output/layer_graticule_oval_3_command.txt[]
+include::output/layer_graticule_oval_3_result.txt[]
+
+include::output/layer_graticule_oval_4_command.txt[]
+include::output/layer_graticule_oval_4_result.txt[]
+
+include::output/layer_graticule_oval_5_command.txt[]
+include::output/layer_graticule_oval_5_result.txt[]
+
+include::output/layer_graticule_oval_6_command.txt[]
+include::output/layer_graticule_oval_6_result.txt[]
+
+include::output/layer_graticule_oval_7_command.txt[]
+include::output/layer_graticule_oval_7_result.txt[]
+
+include::output/layer_graticule_oval_8_command.txt[]
+include::output/layer_graticule_oval_8_result.txt[]
+
+include::output/layer_graticule_oval_9_command.txt[]
+include::output/layer_graticule_oval_9_result.txt[]
+
+include::output/layer_graticule_oval_10_command.txt[]
+include::output/layer_graticule_oval_10_result.txt[]
+
+include::output/layer_graticule_oval_11_command.txt[]
+include::output/layer_graticule_oval_11_result.txt[]
+
+include::output/layer_graticule_oval_12_command.txt[]
+include::output/layer_graticule_oval_12_result.txt[]
+
+include::output/layer_graticule_oval_13_command.txt[]
+include::output/layer_graticule_oval_13_result.txt[]
+
+include::output/layer_graticule_oval_14_command.txt[]
+include::output/layer_graticule_oval_14_result.txt[]
+
+image::oval_graticules.png[]
