--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -53,6 +53,67 @@ include::output/layer_random_14_result.txt[]
 
 image::random_points.png[]
 
+==== Buffer
+
+include::output/layer_buffer_0_command.txt[]
+include::output/layer_buffer_0_result.txt[]
+
+include::output/layer_buffer_1_command.txt[]
+include::output/layer_buffer_1_result.txt[]
+
+include::output/layer_buffer_2_command.txt[]
+include::output/layer_buffer_2_result.txt[]
+
+include::output/layer_buffer_3_command.txt[]
+include::output/layer_buffer_3_result.txt[]
+
+include::output/layer_buffer_4_command.txt[]
+include::output/layer_buffer_4_result.txt[]
+
+include::output/layer_buffer_5_command.txt[]
+include::output/layer_buffer_5_result.txt[]
+
+include::output/layer_buffer_6_command.txt[]
+include::output/layer_buffer_6_result.txt[]
+
+include::output/layer_buffer_7_command.txt[]
+include::output/layer_buffer_7_result.txt[]
+
+include::output/layer_buffer_8_command.txt[]
+include::output/layer_buffer_8_result.txt[]
+
+include::output/layer_buffer_9_command.txt[]
+include::output/layer_buffer_9_result.txt[]
+
+include::output/layer_buffer_10_command.txt[]
+include::output/layer_buffer_10_result.txt[]
+
+include::output/layer_buffer_11_command.txt[]
+include::output/layer_buffer_11_result.txt[]
+
+include::output/layer_buffer_12_command.txt[]
+include::output/layer_buffer_12_result.txt[]
+
+include::output/layer_buffer_13_command.txt[]
+include::output/layer_buffer_13_result.txt[]
+
+include::output/layer_buffer_14_command.txt[]
+include::output/layer_buffer_14_result.txt[]
+
+include::output/layer_buffer_15_command.txt[]
+include::output/layer_buffer_15_result.txt[]
+
+include::output/layer_buffer_16_command.txt[]
+include::output/layer_buffer_16_result.txt[]
+
+include::output/layer_buffer_17_command.txt[]
+include::output/layer_buffer_17_result.txt[]
+
+include::output/layer_buffer_18_command.txt[]
+include::output/layer_buffer_18_result.txt[]
+
+image::layer_buffer.png[]
+
 === Graticule
 
 ==== Square
