Add command option tables.

--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -6,6 +6,8 @@ ifndef::imagesdir[:imagesdir: images]
 
 ==== Random Points
 
+include::commands/layer random.txt[]
+
 include::output/layer_random_0_command.txt[]
 include::output/layer_random_0_result.txt[]
 
@@ -54,6 +56,8 @@ include::output/layer_random_14_result.txt[]
 image::random_points.png[]
 
 ==== Buffer
+
+include::commands/layer buffer.txt[]
 
 include::output/layer_buffer_0_command.txt[]
 include::output/layer_buffer_0_result.txt[]
@@ -118,6 +122,8 @@ image::layer_buffer.png[]
 
 ==== Square
 
+include::commands/layer graticule square.txt[]
+
 include::output/layer_graticule_square_0_command.txt[]
 include::output/layer_graticule_square_0_result.txt[]
 
@@ -166,6 +172,8 @@ include::output/layer_graticule_square_14_result.txt[]
 image::square_graticules.png[]
 
 ==== Oval
+
+include::commands/layer graticule oval.txt[]
 
 include::output/layer_graticule_oval_0_command.txt[]
 include::output/layer_graticule_oval_0_result.txt[]
