--- a/src/main/docs/workspace.adoc
+++ b/src/main/docs/workspace.adoc
@@ -12,7 +12,7 @@ is an in memory Workspace.
 
 .Open a Workspace
 
-include::commands/workspace open.txt[]
+include::commands/workspace_open.txt[]
 
 include::output/workspace_basics_open_command.txt[]
 include::output/workspace_basics_open_result.txt[]
@@ -22,7 +22,7 @@ You can give it a name with --name flag.
 
 .List open Workspaces
 
-include::commands/workspace list.txt[]
+include::commands/workspace_list.txt[]
 
 include::output/workspace_basics_list_command.txt[]
 include::output/workspace_basics_list_result.txt[]
@@ -31,7 +31,7 @@ Listing open Workspaces give you the name and the type Workspace.
 
 .Close a Workspace
 
-include::commands/workspace close.txt[]
+include::commands/workspace_close.txt[]
 
 include::output/workspace_basics_close_command.txt[]
 include::output/workspace_basics_close_result.txt[]
