--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -118,6 +118,126 @@ include::output/layer_buffer_18_result.txt[]
 
 image::layer_buffer.png[]
 
+==== Extent
+
+include::commands/layer_extent.txt[]
+
+include::output/layer_extent_0_command.txt[]
+include::output/layer_extent_0_result.txt[]
+
+include::output/layer_extent_1_command.txt[]
+include::output/layer_extent_1_result.txt[]
+
+include::output/layer_extent_2_command.txt[]
+include::output/layer_extent_2_result.txt[]
+
+include::output/layer_extent_3_command.txt[]
+include::output/layer_extent_3_result.txt[]
+
+include::output/layer_extent_4_command.txt[]
+include::output/layer_extent_4_result.txt[]
+
+include::output/layer_extent_5_command.txt[]
+include::output/layer_extent_5_result.txt[]
+
+include::output/layer_extent_6_command.txt[]
+include::output/layer_extent_6_result.txt[]
+
+include::output/layer_extent_7_command.txt[]
+include::output/layer_extent_7_result.txt[]
+
+include::output/layer_extent_8_command.txt[]
+include::output/layer_extent_8_result.txt[]
+
+include::output/layer_extent_9_command.txt[]
+include::output/layer_extent_9_result.txt[]
+
+include::output/layer_extent_10_command.txt[]
+include::output/layer_extent_10_result.txt[]
+
+include::output/layer_extent_11_command.txt[]
+include::output/layer_extent_11_result.txt[]
+
+include::output/layer_extent_12_command.txt[]
+include::output/layer_extent_12_result.txt[]
+
+include::output/layer_extent_13_command.txt[]
+include::output/layer_extent_13_result.txt[]
+
+include::output/layer_extent_14_command.txt[]
+include::output/layer_extent_14_result.txt[]
+
+include::output/layer_extent_15_command.txt[]
+include::output/layer_extent_15_result.txt[]
+
+include::output/layer_extent_16_command.txt[]
+include::output/layer_extent_16_result.txt[]
+
+include::output/layer_extent_17_command.txt[]
+include::output/layer_extent_17_result.txt[]
+
+image::layer_extent.png[]
+
+==== Extents
+
+include::commands/layer_extents.txt[]
+
+include::output/layer_extents_0_command.txt[]
+include::output/layer_extents_0_result.txt[]
+
+include::output/layer_extents_1_command.txt[]
+include::output/layer_extents_1_result.txt[]
+
+include::output/layer_extents_2_command.txt[]
+include::output/layer_extents_2_result.txt[]
+
+include::output/layer_extents_3_command.txt[]
+include::output/layer_extents_3_result.txt[]
+
+include::output/layer_extents_4_command.txt[]
+include::output/layer_extents_4_result.txt[]
+
+include::output/layer_extents_5_command.txt[]
+include::output/layer_extents_5_result.txt[]
+
+include::output/layer_extents_6_command.txt[]
+include::output/layer_extents_6_result.txt[]
+
+include::output/layer_extents_7_command.txt[]
+include::output/layer_extents_7_result.txt[]
+
+include::output/layer_extents_8_command.txt[]
+include::output/layer_extents_8_result.txt[]
+
+include::output/layer_extents_9_command.txt[]
+include::output/layer_extents_9_result.txt[]
+
+include::output/layer_extents_10_command.txt[]
+include::output/layer_extents_10_result.txt[]
+
+include::output/layer_extents_11_command.txt[]
+include::output/layer_extents_11_result.txt[]
+
+include::output/layer_extents_12_command.txt[]
+include::output/layer_extents_12_result.txt[]
+
+include::output/layer_extents_13_command.txt[]
+include::output/layer_extents_13_result.txt[]
+
+include::output/layer_extents_14_command.txt[]
+include::output/layer_extents_14_result.txt[]
+
+include::output/layer_extents_15_command.txt[]
+include::output/layer_extents_15_result.txt[]
+
+include::output/layer_extents_16_command.txt[]
+include::output/layer_extents_16_result.txt[]
+
+include::output/layer_extents_17_command.txt[]
+include::output/layer_extents_17_result.txt[]
+
+image::layer_extents.png[]
+
 === Graticule
 
 ==== Square
