Add hexagon graticule command

--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -392,3 +392,54 @@ include::output/layer_graticule_oval_14_command.txt[]
 include::output/layer_graticule_oval_14_result.txt[]
 
 image::oval_graticules.png[]
+
+==== Hexagon
+
+include::commands/layer_graticule_hexagon.txt[]
+
+include::output/layer_graticule_hexagon_0_command.txt[]
+include::output/layer_graticule_hexagon_0_result.txt[]
+
+include::output/layer_graticule_hexagon_1_command.txt[]
+include::output/layer_graticule_hexagon_1_result.txt[]
+
+include::output/layer_graticule_hexagon_2_command.txt[]
+include::output/layer_graticule_hexagon_2_result.txt[]
+
+include::output/layer_graticule_hexagon_3_command.txt[]
+include::output/layer_graticule_hexagon_3_result.txt[]
+
+include::output/layer_graticule_hexagon_4_command.txt[]
+include::output/layer_graticule_hexagon_4_result.txt[]
+
+include::output/layer_graticule_hexagon_5_command.txt[]
+include::output/layer_graticule_hexagon_5_result.txt[]
+
+include::output/layer_graticule_hexagon_6_command.txt[]
+include::output/layer_graticule_hexagon_6_result.txt[]
+
+include::output/layer_graticule_hexagon_7_command.txt[]
+include::output/layer_graticule_hexagon_7_result.txt[]
+
+include::output/layer_graticule_hexagon_8_command.txt[]
+include::output/layer_graticule_hexagon_8_result.txt[]
+
+include::output/layer_graticule_hexagon_9_command.txt[]
+include::output/layer_graticule_hexagon_9_result.txt[]
+
+include::output/layer_graticule_hexagon_10_command.txt[]
+include::output/layer_graticule_hexagon_10_result.txt[]
+
+include::output/layer_graticule_hexagon_11_command.txt[]
+include::output/layer_graticule_hexagon_11_result.txt[]
+
+include::output/layer_graticule_hexagon_12_command.txt[]
+include::output/layer_graticule_hexagon_12_result.txt[]
+
+include::output/layer_graticule_hexagon_13_command.txt[]
+include::output/layer_graticule_hexagon_13_result.txt[]
+
+include::output/layer_graticule_hexagon_14_command.txt[]
+include::output/layer_graticule_hexagon_14_result.txt[]
+
+image::hexagon_graticules.png[]
