--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -169,6 +169,57 @@ include::output/layer_centroid_14_result.txt[]
 
 image::layer_centroid.png[]
 
+==== Interior Point
+
+include::commands/layer_interiorpoint.txt[]
+
+include::output/layer_interiorpoint_0_command.txt[]
+include::output/layer_interiorpoint_0_result.txt[]
+
+include::output/layer_interiorpoint_1_command.txt[]
+include::output/layer_interiorpoint_1_result.txt[]
+
+include::output/layer_interiorpoint_2_command.txt[]
+include::output/layer_interiorpoint_2_result.txt[]
+
+include::output/layer_interiorpoint_3_command.txt[]
+include::output/layer_interiorpoint_3_result.txt[]
+
+include::output/layer_interiorpoint_4_command.txt[]
+include::output/layer_interiorpoint_4_result.txt[]
+
+include::output/layer_interiorpoint_5_command.txt[]
+include::output/layer_interiorpoint_5_result.txt[]
+
+include::output/layer_interiorpoint_6_command.txt[]
+include::output/layer_interiorpoint_6_result.txt[]
+
+include::output/layer_interiorpoint_7_command.txt[]
+include::output/layer_interiorpoint_7_result.txt[]
+
+include::output/layer_interiorpoint_8_command.txt[]
+include::output/layer_interiorpoint_8_result.txt[]
+
+include::output/layer_interiorpoint_9_command.txt[]
+include::output/layer_interiorpoint_9_result.txt[]
+
+include::output/layer_interiorpoint_10_command.txt[]
+include::output/layer_interiorpoint_10_result.txt[]
+
+include::output/layer_interiorpoint_11_command.txt[]
+include::output/layer_interiorpoint_11_result.txt[]
+
+include::output/layer_interiorpoint_12_command.txt[]
+include::output/layer_interiorpoint_12_result.txt[]
+
+include::output/layer_interiorpoint_13_command.txt[]
+include::output/layer_interiorpoint_13_result.txt[]
+
+include::output/layer_interiorpoint_14_command.txt[]
+include::output/layer_interiorpoint_14_result.txt[]
+
+image::layer_interiorpoint.png[]
+
 ==== Extent
 
 include::commands/layer_extent.txt[]
