--- a/src/main/docs/other.adoc
+++ b/src/main/docs/other.adoc
@@ -4,12 +4,12 @@ ifndef::imagesdir[:imagesdir: images]
 
 === Unzip
 
-Unzip a zip file
+include::commands/unzip_description.txt[]
 
 include::commands/unzip.txt[]
 
 === Open
 
-Open a File
+include::commands/open_description.txt[]
 
 include::commands/open.txt[]
